database/pgadmin/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-ingress
  namespace: database
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pga.local.unrelated.family`)
      kind: Rule
      services:
        - name: pgadmin-pgadmin4
          port: 80
#      middlewares:
#        - name: default-headers
#        - name: real-ip
  tls:
    secretName: local-unrelated-family-tls
